2006-03-14  Paul Kienzle  <pkienzle@users.sf.net>

	* xpow.cc: New tests.

2006-03-13  John W. Eaton  <jwe@octave.org>

	* variables.cc (fcn_out_of_date): No longer static.
	* ov-fcn-handle.cc (warn_reload): New function.
	(octave_fcn_handle::subsref): Implement basic logic for updating
	when pointed-to function changes.

2006-03-10  John W. Eaton  <jwe@octave.org>

	* xpow.cc (elem_xpow): Only use complex pow if really necessary.

	* symtab.cc (symbol_table::glob, symbol_table::symbol_list,
	symbol_table::subsymbol_list): Force result to be a column
	vector.

	* oct-stream.h (octave_stream::stream_ok): Undo previous change.
	Eliminate who parameter.  Change all callers.

	* variables.cc (do_who): Return more info in structure array for
	verbose output.
	* symtab.h (symbol_record::size, symbol_record::class_name,
	symbol_record::is_sparse_type, symbol_record::is_complex_type,
	symbol_record::size, symbol_record::symbol_def::class_name,
	symbol_record::symbol_def::is_sparse_type,
	symbol_record::symbol_def::is_complex_type): New functions.
	* ov.h (octave_value::size): New function.

2006-03-09  John W. Eaton  <jwe@octave.org>

	* toplev.cc (run_command_and_return_output): Swap output and
	status for compatibility.

	* Makefile.in (defaults.h, oct-conf.h): Force updates.

	* defaults.h.in (OCTAVE_RELEASE): New macro.

	* octave.cc (F__version_info__): New arg, release.
	(initialize_version_info): Pass release arg to F__version_info__.

	* toplev.cc: Include api_version in the list.

	* Makefile.in (DIST_SRC): Include octave.cc here.
	(DISTFILES, DEP_5): Not here.

	* octave.cc (F__version_info__): New function.
	(initialize_version_info): New function.
	(octave_main): Call initialize_version_info just before reading
	init files.

	* version.h (OCTAVE_RELEASE_DATE): New macro.

	* ov-fcn-handle.h (octave_fcn_handle::dims): New function.

2006-03-08  John W. Eaton  <jwe@octave.org>

	* oct-stream.cc (octave_stream::stream_ok): Move definition here,